--- a/podfile
+++ b/podfile
@@ -24,6 +24,8 @@ target 'GouGou-Live' do
           pod 'UMengUShare/Social/QQ'
         # 七牛云推流
 	 pod 'PLMediaStreamingKit'
+     # 七牛云拉流
+ 
   # Pods for GouGou-Live
 
 end
