--- a/GouGou-Live/Classes/Others/Info.plist
+++ b/GouGou-Live/Classes/Others/Info.plist
@@ -131,5 +131,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>开启定位</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>开启定位</string>
 </dict>
 </plist>
