--- a/GouGou-Live/Classes/Others/Info.plist
+++ b/GouGou-Live/Classes/Others/Info.plist
@@ -26,7 +26,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>WX</string>
+			<string>GGWX</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>wxbef5a0656069e8e2</string>
@@ -132,7 +132,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
