--- a/GouGou-Live/Classes/Others/Info.plist
+++ b/GouGou-Live/Classes/Others/Info.plist
@@ -72,6 +72,16 @@
 				<string>ap2016112203105439</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>GouGouScheme</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>ZhuaxingLive</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.2.1</string>
@@ -124,7 +134,7 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>开启定位</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>开启定位</string>
+	<string>是否允许开启定位？</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>microphoneDesciption</string>
 	<key>NSPhotoLibraryUsageDescription</key>
