--- a/podfile
+++ b/podfile
@@ -21,7 +21,10 @@ target 'GouGou-Live' do
     	  pod 'UMengUShare/Social/WeChat'
     	# 集成QQ
           pod 'UMengUShare/Social/QQ'
-        # 七牛云推流
+	# 友盟统计
+	pod 'UMengAnalytics'
+        
+	# 七牛云推流
         pod 'PLMediaStreamingKit'
         pod 'PLPlayerKit'
   # Pods for GouGou-Live
