--- a/GouGou-Live/Classes/Others/Info.plist
+++ b/GouGou-Live/Classes/Others/Info.plist
@@ -149,6 +149,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
